--- a/public/index.html
+++ b/public/index.html
@@ -87,15 +87,20 @@
         // Send a message
         function sendMessage() {
             const token = localStorage.getItem('token');
-            if (!token) {
+            const username = localStorage.getItem('username');
+            if (!token || !username) {
                 alert('You must log in to send messages.');
                 return;
             }
 
-            const user = document.getElementById('user').value;
             const content = document.getElementById('content').value;
+            if (!content.trim()) {
+                alert('Message cannot be empty.');
+                return;
+            }
 
-            socket.emit('sendMessage', { content, token });
+            socket.emit('sendMessage', { user: username, content, token });
+            document.getElementById('content').value = ''; // Clear the input
         }
         // Fetch messages when the page loads
         window.onload = fetchMessages;
